@@ -582,10 +582,10 @@ public class AssertTest {
 
   @Test(description = "GITHUB-3140")
   public void testAssertEqualsDeepSet() {
-    var expectedSet = new HashSet<>();
+    var expectedSet = new LinkedHashSet<>();
     expectedSet.add(new Contrived(1));
     expectedSet.add(new Contrived[] {new Contrived(1)});
-    var actualSet = new HashSet<>();
+    var actualSet = new LinkedHashSet<>();
     actualSet.add(new Contrived(1));
     actualSet.add(new Contrived[] {new Contrived(1)});
     Assert.assertEqualsDeep(actualSet, expectedSet);
@@ -593,10 +593,10 @@ public class AssertTest {
 
   @Test(description = "GITHUB-3140", expectedExceptions = AssertionError.class)
   public void testAssertEqualsDeepSetFail() {
-    var expectedSet = new HashSet<>();
+    var expectedSet = new LinkedHashSet<>();
     expectedSet.add(new Contrived(1));
     expectedSet.add(new Contrived[] {new Contrived(1)});
-    var actualSet = new HashSet<>();
+    var actualSet = new LinkedHashSet<>();
     actualSet.add(new Contrived(1));
     actualSet.add(new Contrived[] {new Contrived(2)});
     Assert.assertEqualsDeep(actualSet, expectedSet);
